k8s/admin/admin-basic-auth.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: admin-basic-auth-middleware
  namespace: traefik
spec:
  basicAuth:
    secret: admin-basic-auth-user
