k8s/admin/argocd-dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-dashboard-ingress
  namespace: traefik
spec:
  routes:
  - match: Host(`todo-admin.cscms.me`)
    kind: Rule
    services:
    - name: argocd-argo-cd-server
      namespace: argocd
      kind: Service
      port: 80
      scheme: http
  tls:
    secretName: todo-admin-tls
    domains: 
    - main: todo-admin.cscms.me
